--- a/ECSSamples/Packages/manifest.json
+++ b/ECSSamples/Packages/manifest.json
@@ -4,14 +4,15 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.coding": "0.1.0-preview.17",
     "com.unity.ide.rider": "2.0.5",
-    "com.unity.ide.visualstudio": "2.0.2",
-    "com.unity.ide.vscode": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.3",
+    "com.unity.ide.vscode": "1.2.2",
     "com.unity.performance.profile-analyzer": "0.6.0-preview.1",
     "com.unity.platforms.android": "0.6.0-preview.1",
     "com.unity.platforms.linux": "0.6.0-preview.1",
     "com.unity.platforms.macos": "0.6.0-preview.1",
     "com.unity.platforms.windows": "0.6.0-preview.1",
-    "com.unity.test-framework": "1.1.14",
+    "com.unity.rendering.hybrid": "0.7.0-preview.24",
+    "com.unity.test-framework": "1.1.18",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -43,8 +44,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.rendering.hybrid": "0.7.0-preview.24"
+    "com.unity.modules.xr": "1.0.0"
   },
   "testables": [
     "com.unity.collections",
