--- a/ECSSamples/Packages/manifest.json
+++ b/ECSSamples/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.platforms.linux": "0.6.0-preview.1",
     "com.unity.platforms.macos": "0.6.0-preview.1",
     "com.unity.platforms.windows": "0.6.0-preview.1",
+    "com.unity.render-pipelines.universal": "8.2.0",
     "com.unity.rendering.hybrid": "0.7.0-preview.24",
     "com.unity.test-framework": "1.1.18",
     "com.unity.ugui": "1.0.0",
